cmake_minimum_required(VERSION 3.8)
project(cmpe126f17_cmpe126f17_labs_5ac6f227c2fb)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        lib/lab04/inc/linked_list.h
        lib/lab04/inc/node.h
        lib/lab04/src/linked_list.cpp
        lib/lab04/src/node.cpp
        lib/lab05/inc/expression.h
        lib/lab05/inc/node.h
        lib/lab05/inc/queue.h
        lib/lab05/inc/stack.h
        lib/lab05/src/expression.cpp
        lib/lab05/src/node.cpp
        lib/lab05/src/queue.cpp
        lib/lab05/src/stack.cpp
        lib/lab06/inc/deck.h
        lib/lab06/inc/doubly_linked_list.h
        lib/lab06/inc/node.h
        lib/lab06/src/deck.cpp
        lib/lab06/src/doubly_linked_list.cpp
        lib/lab07/inc/node.h
        lib/lab07/inc/tree.h
        lib/lab07/src/tree.cpp
        lib/lab08/inc/sorts.h
        lib/lab08/src/sorts.cpp
        test/lib/gtest-1.7.0/codegear/gtest_all.cc
        test/lib/gtest-1.7.0/codegear/gtest_link.cc
        test/lib/gtest-1.7.0/fused-src/gtest/gtest-all.cc
        test/lib/gtest-1.7.0/fused-src/gtest/gtest.h
        test/lib/gtest-1.7.0/fused-src/gtest/gtest_main.cc
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-death-test-internal.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-filepath.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-internal.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-linked_ptr.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-param-util-generated.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-param-util.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-port.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-string.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-tuple.h
        test/lib/gtest-1.7.0/include/gtest/internal/gtest-type-util.h
        test/lib/gtest-1.7.0/include/gtest/gtest-death-test.h
        test/lib/gtest-1.7.0/include/gtest/gtest-message.h
        test/lib/gtest-1.7.0/include/gtest/gtest-param-test.h
        test/lib/gtest-1.7.0/include/gtest/gtest-printers.h
        test/lib/gtest-1.7.0/include/gtest/gtest-spi.h
        test/lib/gtest-1.7.0/include/gtest/gtest-test-part.h
        test/lib/gtest-1.7.0/include/gtest/gtest-typed-test.h
        test/lib/gtest-1.7.0/include/gtest/gtest.h
        test/lib/gtest-1.7.0/include/gtest/gtest_pred_impl.h
        test/lib/gtest-1.7.0/include/gtest/gtest_prod.h
        test/lib/gtest-1.7.0/samples/prime_tables.h
        test/lib/gtest-1.7.0/samples/sample1.cc
        test/lib/gtest-1.7.0/samples/sample1.h
        test/lib/gtest-1.7.0/samples/sample10_unittest.cc
        test/lib/gtest-1.7.0/samples/sample1_unittest.cc
        test/lib/gtest-1.7.0/samples/sample2.cc
        test/lib/gtest-1.7.0/samples/sample2.h
        test/lib/gtest-1.7.0/samples/sample2_unittest.cc
        test/lib/gtest-1.7.0/samples/sample3-inl.h
        test/lib/gtest-1.7.0/samples/sample3_unittest.cc
        test/lib/gtest-1.7.0/samples/sample4.cc
        test/lib/gtest-1.7.0/samples/sample4.h
        test/lib/gtest-1.7.0/samples/sample4_unittest.cc
        test/lib/gtest-1.7.0/samples/sample5_unittest.cc
        test/lib/gtest-1.7.0/samples/sample6_unittest.cc
        test/lib/gtest-1.7.0/samples/sample7_unittest.cc
        test/lib/gtest-1.7.0/samples/sample8_unittest.cc
        test/lib/gtest-1.7.0/samples/sample9_unittest.cc
        test/lib/gtest-1.7.0/src/gtest-all.cc
        test/lib/gtest-1.7.0/src/gtest-death-test.cc
        test/lib/gtest-1.7.0/src/gtest-filepath.cc
        test/lib/gtest-1.7.0/src/gtest-internal-inl.h
        test/lib/gtest-1.7.0/src/gtest-port.cc
        test/lib/gtest-1.7.0/src/gtest-printers.cc
        test/lib/gtest-1.7.0/src/gtest-test-part.cc
        test/lib/gtest-1.7.0/src/gtest-typed-test.cc
        test/lib/gtest-1.7.0/src/gtest.cc
        test/lib/gtest-1.7.0/src/gtest_main.cc
        test/lib/gtest-1.7.0/test/gtest-death-test_ex_test.cc
        test/lib/gtest-1.7.0/test/gtest-death-test_test.cc
        test/lib/gtest-1.7.0/test/gtest-filepath_test.cc
        test/lib/gtest-1.7.0/test/gtest-linked_ptr_test.cc
        test/lib/gtest-1.7.0/test/gtest-listener_test.cc
        test/lib/gtest-1.7.0/test/gtest-message_test.cc
        test/lib/gtest-1.7.0/test/gtest-options_test.cc
        test/lib/gtest-1.7.0/test/gtest-param-test2_test.cc
        test/lib/gtest-1.7.0/test/gtest-param-test_test.cc
        test/lib/gtest-1.7.0/test/gtest-param-test_test.h
        test/lib/gtest-1.7.0/test/gtest-port_test.cc
        test/lib/gtest-1.7.0/test/gtest-printers_test.cc
        test/lib/gtest-1.7.0/test/gtest-test-part_test.cc
        test/lib/gtest-1.7.0/test/gtest-tuple_test.cc
        test/lib/gtest-1.7.0/test/gtest-typed-test2_test.cc
        test/lib/gtest-1.7.0/test/gtest-typed-test_test.cc
        test/lib/gtest-1.7.0/test/gtest-typed-test_test.h
        test/lib/gtest-1.7.0/test/gtest-unittest-api_test.cc
        test/lib/gtest-1.7.0/test/gtest_all_test.cc
        test/lib/gtest-1.7.0/test/gtest_break_on_failure_unittest_.cc
        test/lib/gtest-1.7.0/test/gtest_catch_exceptions_test_.cc
        test/lib/gtest-1.7.0/test/gtest_color_test_.cc
        test/lib/gtest-1.7.0/test/gtest_env_var_test_.cc
        test/lib/gtest-1.7.0/test/gtest_environment_test.cc
        test/lib/gtest-1.7.0/test/gtest_filter_unittest_.cc
        test/lib/gtest-1.7.0/test/gtest_help_test_.cc
        test/lib/gtest-1.7.0/test/gtest_list_tests_unittest_.cc
        test/lib/gtest-1.7.0/test/gtest_main_unittest.cc
        test/lib/gtest-1.7.0/test/gtest_no_test_unittest.cc
        test/lib/gtest-1.7.0/test/gtest_output_test_.cc
        test/lib/gtest-1.7.0/test/gtest_pred_impl_unittest.cc
        test/lib/gtest-1.7.0/test/gtest_premature_exit_test.cc
        test/lib/gtest-1.7.0/test/gtest_prod_test.cc
        test/lib/gtest-1.7.0/test/gtest_repeat_test.cc
        test/lib/gtest-1.7.0/test/gtest_shuffle_test_.cc
        test/lib/gtest-1.7.0/test/gtest_sole_header_test.cc
        test/lib/gtest-1.7.0/test/gtest_stress_test.cc
        test/lib/gtest-1.7.0/test/gtest_throw_on_failure_ex_test.cc
        test/lib/gtest-1.7.0/test/gtest_throw_on_failure_test_.cc
        test/lib/gtest-1.7.0/test/gtest_uninitialized_test_.cc
        test/lib/gtest-1.7.0/test/gtest_unittest.cc
        test/lib/gtest-1.7.0/test/gtest_xml_outfile1_test_.cc
        test/lib/gtest-1.7.0/test/gtest_xml_outfile2_test_.cc
        test/lib/gtest-1.7.0/test/gtest_xml_output_unittest_.cc
        test/lib/gtest-1.7.0/test/production.cc
        test/lib/gtest-1.7.0/test/production.h
        test/lib/gtest-1.7.0/xcode/Samples/FrameworkSample/widget.cc
        test/lib/gtest-1.7.0/xcode/Samples/FrameworkSample/widget.h
        test/lib/gtest-1.7.0/xcode/Samples/FrameworkSample/widget_test.cc
        test/lab04_tests.cpp
        test/lab05_tests.cpp
        test/lab06_tests.cpp
        test/lab07_tests.cpp
        test/lab08_tests.cpp
        main.cpp)

add_executable(cmpe126f17_cmpe126f17_labs_5ac6f227c2fb ${SOURCE_FILES})